--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,12 @@
   text-align: center;
 }
 
-ul, li, Link {
+ul {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     color: white;
+    text-decoration: none;
 }
 
 #nav {
